styles.css
* {
    margin: 0;
    padding: 0;
}

@media screen {
    
}

html, body {
    background-color: #1f2937;
    color: #FFFFFF;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    height: 100%;
    margin: 0;
    padding: 0 15px 0 15px;
    font-family: 'Sono', sans-serif;
}

.main {
flex: 1;
margin-top: 150px;
padding: 0 15px; 

}
h1 {
    font-size: 40px;
    margin-top: 10px;
    margin-bottom: 10px;
}

h2 {
    font-size: 15px;
    color: #d5d4d8;
    margin-top: 10px;
    margin-bottom: 50px;
}

#title-color {
   color: #10b981;
}

#generate {
    font-size: 18px;
    background-color: #10B981;
    color: #FFFFFF;
    width: 190px;
    height: 40px;
    border-radius: 6px;
    border: none;
    margin-bottom: 35px;
    cursor: pointer;
}
#generate:hover {
    color: #2f3e53;
    font-size: 19px;
}

hr {
    border: 1px solid #2f3e53;
}

.password-container {
display: flex;
margin-top: 35px;
gap: 10px;

}


#first-pass, #second-pass {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    height: 2rem;
    font-size: 16px;
    width: 165px;
    color: #55f991;
    background-color: #273549;
    cursor: pointer;
    padding: 10px 16px;
    border-radius: 7px;
    word-break: break-all;
}

#first-pass:hover, #second-pass:hover {
    color: #FFFFFF;
    font-size: 17px;
}

